# Anomaly-Detection-in-CREDO-Dataset

./: .gitignore  LICENSE  Makefile  README.md  make-dataset.py  pca.ipynb  preprocessing.py  pyproject.toml  requirements.txt  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
models/: autoencoder.keras  autoencoders.py  model_inc_pca.pkl  model_pca_big.pkl  pca2d.py  pca2d_square.py
notebooks/: 03-pca-analysis.ipynb  04-autoencoders-analysis_john_small_data.ipynb  08-proprosessing_tests.ipynb  09-preprocessing_and_PCA_tests.ipynb  10-preprocessing_and_PCA_tests_small_data.ipynb  11-notebook_prepro_tests.ipynb  12-2d_pca.ipynb  13-autoencoder_minimal_processing.ipynb  2dpca_notebook.ipynb  TDA_credo.ipynb  auto-encoders.ipynb  autoencoder.ipynb  autoencoders.ipynb  pca-intro.ipynb  preprocessing_how_works.ipynb
src/data/: annotate_dataset.py  get_dataset.py  get_small_dataset.py  make_dataset.py  preprocessing.py
src/dataset/: dataloader.py
