[tool.poetry]
name = "anomaly-detection-in-credo-dataset"
version = "0.1.0"
description = "This is the project for AGH UST class"
authors = ["Marcin Zub <zub@student.agh.edu.pl>", "Jan Tyc <tyc@student.agh.edu.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
Sphinx = "^4.3.0"
coverage = "^6.0.2"
awscli = "^1.30.4"
flake8 = "^4.0.1"
python-dotenv = "^0.5.1"

numpy = "^1.26.2"
setuptools = "^68.2.2"
scikit-image = "^0.22.0"
scikit-learn = "^1.3.2"
opencv-python = "^4.8.1.78"
matplotlib = "^3.5.1"
gdown = "^4.7.1"
torch = "^2.1.1"
torchvision = "^0.16.1"
pandas = "^2.1.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
